; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-nested.c_lower_nested_functions.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-nested.c_lower_nested_functions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_8__* }
%struct.cgraph_node = type { i32 }

@root = common dso_local global %struct.TYPE_8__* null, align 8
@convert_nonlocal_reference = common dso_local global i32 0, align 4
@convert_local_reference = common dso_local global i32 0, align 4
@convert_nl_goto_reference = common dso_local global i32 0, align 4
@convert_nl_goto_receiver = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lower_nested_functions(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.cgraph_node*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.cgraph_node* @cgraph_node(i32 %6)
  store %struct.cgraph_node* %7, %struct.cgraph_node** %5, align 8
  %8 = load %struct.cgraph_node*, %struct.cgraph_node** %5, align 8
  %9 = getelementptr inbounds %struct.cgraph_node, %struct.cgraph_node* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  br label %43

13:                                               ; preds = %2
  %14 = load %struct.cgraph_node*, %struct.cgraph_node** %5, align 8
  %15 = call %struct.TYPE_8__* @create_nesting_tree(%struct.cgraph_node* %14)
  store %struct.TYPE_8__* %15, %struct.TYPE_8__** @root, align 8
  %16 = load i32, i32* %4, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %13
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %20, align 8
  store %struct.TYPE_8__* %21, %struct.TYPE_8__** @root, align 8
  br label %22

22:                                               ; preds = %18, %13
  %23 = load i32, i32* @convert_nonlocal_reference, align 4
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %25 = call i32 @walk_all_functions(i32 %23, %struct.TYPE_8__* %24)
  %26 = load i32, i32* @convert_local_reference, align 4
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %28 = call i32 @walk_all_functions(i32 %26, %struct.TYPE_8__* %27)
  %29 = load i32, i32* @convert_nl_goto_reference, align 4
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %31 = call i32 @walk_all_functions(i32 %29, %struct.TYPE_8__* %30)
  %32 = load i32, i32* @convert_nl_goto_receiver, align 4
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %34 = call i32 @walk_all_functions(i32 %32, %struct.TYPE_8__* %33)
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %36 = call i32 @convert_all_function_calls(%struct.TYPE_8__* %35)
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %38 = call i32 @finalize_nesting_tree(%struct.TYPE_8__* %37)
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %40 = call i32 @unnest_nesting_tree(%struct.TYPE_8__* %39)
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** @root, align 8
  %42 = call i32 @free_nesting_tree(%struct.TYPE_8__* %41)
  store %struct.TYPE_8__* null, %struct.TYPE_8__** @root, align 8
  br label %43

43:                                               ; preds = %22, %12
  ret void
}

declare dso_local %struct.cgraph_node* @cgraph_node(i32) #1

declare dso_local %struct.TYPE_8__* @create_nesting_tree(%struct.cgraph_node*) #1

declare dso_local i32 @walk_all_functions(i32, %struct.TYPE_8__*) #1

declare dso_local i32 @convert_all_function_calls(%struct.TYPE_8__*) #1

declare dso_local i32 @finalize_nesting_tree(%struct.TYPE_8__*) #1

declare dso_local i32 @unnest_nesting_tree(%struct.TYPE_8__*) #1

declare dso_local i32 @free_nesting_tree(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
